--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
                     <div class="card bg-dark text-light h-100">
-                        <a href="https://github.com/timbelmon/project-pages/cybderdeck1.html"><img src="project-images\cyberdeck1.jpeg" class="card-img-top" alt="Project 1 Screenshot"></a>
+                        <a href="https://timbelmon.github.io/project-pages/cybderdeck1.html"><img src="project-images\cyberdeck1.jpeg" class="card-img-top" alt="Project 1 Screenshot"></a>
                         <div class="card-body">
                             <h5 class="card-title">Cyberdeck MK1</h5>
                             <p class="card-text">DIY Laptop based on Ryzen 7 5600G.</p>
