--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timbelmon's Project Log</title>
+    <title>Featured Projects</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
@@ -136,9 +136,9 @@
         <section id="intro" class="text-center mb-5 scroll-highlight">
             <div class="container">
                 <div class="stack" style="--stacks: 3;">
-                    <span style="--index: 0;">Project Log</span>
-                    <span style="--index: 1;">Project Log</span>
-                    <span style="--index: 2;">Project Log</span>
+                    <span style="--index: 0;">Featured Projects</span>
+                    <span style="--index: 1;">Featured Projects</span>
+                    <span style="--index: 2;">Featured Projects</span>
                 </div>
             </div>
             <p class="lead mt-3">Explore my latest projects, feel free to reach out!</p>
@@ -148,7 +148,7 @@
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
                     <div class="card bg-dark text-light h-100">
-                        <a href="https://timbelmon.github.io/project-pages/cybderdeck1.html"><img src="project-images\cyberdeck1.jpeg" class="card-img-top" alt="Project 1 Screenshot"></a>
+                        <a href="/project-pages/cybderdeck1.html"><img src="project-images\cyberdeck1.jpeg" class="card-img-top" alt="Project 1 Screenshot"></a>
                         <div class="card-body">
                             <h5 class="card-title">Cyberdeck MK1</h5>
                             <p class="card-text">DIY Laptop based on Ryzen 7 5600G.</p>
