--- a/project-pages/cybderdeck1.html
+++ b/project-pages/cybderdeck1.html
@@ -6,7 +6,7 @@
     <title>DIY Cyberdeck Build</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <style>
         body {
             background: #0a0a0a;
