added gcoderepeater to project list

--- a/projects.html
+++ b/projects.html
@@ -85,9 +85,9 @@
                     <a href="project-pages\cybderdeck1.html">View Details</a>
                 </li>
                 <li class="project-item">
-                    <h3>Placeholder</h3>
-                    <p>This page is WIP what did you expect?</p>
-                    <a href="project-pages\placeholder.html">View Details</a>
+                    <h3>Gcode-Repeater</h3>
+                    <p>A webtool to help automate 3D-Printing.</p>
+                    <a href="https://timbelmon.github.io/GcodeRepeater/GcodeRepeater.html">Open Tool</a>
                 </li>
                 <!-- Add more project items as needed -->
             </ul>
