--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,7 @@
                 <li class="project-item">
                     <h3>Gcode-Repeater</h3>
                     <p>A webtool to help automate 3D-Printing.</p>
+                    <a href="https://github.com/timbelmon/GcodeRepeater">Open GitHub</a>
                     <a href="https://timbelmon.github.io/GcodeRepeater/GcodeRepeater.html">Open Tool</a>
                 </li>
                 <!-- Add more project items as needed -->
