--- a/project-pages/cybderdeck1.html
+++ b/project-pages/cybderdeck1.html
@@ -45,6 +45,9 @@
             text-align: center;
             padding: 10px;
         }
+        img{
+            border-radius: 20px;
+        }
     </style>
 </head>
 <body>
@@ -87,15 +90,20 @@
                 <li>Logitech Pebble Mouse and a slim generic Bluetooth keyboard.</li>
                 <li>PETG filament and neodymium magnets for enclosure design.</li>
             </ul>
+            <img src="/project-images/cyberdeck1/cyberdeck build process.jpg" class="img-fluid" alt="Responsive image">
 
             <h2>Enclosure Design</h2>
             <p>The enclosure is based on a Pelican-style waterproof box. Inside, a 3D-printed PETG structure houses the DeskMini motherboard and provides multifunctional storage for peripherals.</p>
+            <img src="/project-images/cyberdeck1/cyberdeck-cad.png" class="img-fluid" alt="Responsive image">
 
             <h2>Power Solution</h2>
             <p>The cyberdeck is powered by a 27,000mAh 100W power bank, though battery life is limited. I'm exploring custom LiPo battery solutions to extend usage time.</p>
+            <img src="/project-images/cyberdeck1/cyberdeck1.jpeg" class="img-fluid" alt="Responsive image">
 
             <h2>Work in Progress</h2>
             <p><strong>Missing:</strong> A screen has not been chosen or mounted yet. Suggestions are welcome!</p>
+            <img src="/project-images/cyberdeck1/cyberdeck-screen.png" class="img-fluid" alt="Responsive image">
+            
         </div>
         </main>
 
