--- a/project-pages/cybderdeck1.html
+++ b/project-pages/cybderdeck1.html
@@ -47,6 +47,7 @@
         }
         img{
             border-radius: 20px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -103,7 +104,7 @@
             <h2>Work in Progress</h2>
             <p><strong>Missing:</strong> A screen has not been chosen or mounted yet. Suggestions are welcome!</p>
             <img src="/project-images/cyberdeck1/cyberdeck-screen.png" class="img-fluid" alt="Responsive image">
-            
+
         </div>
         </main>
 
