fixed linebreak issue on contact page

--- a/contact.html
+++ b/contact.html
@@ -36,11 +36,13 @@
             display: flex;
             justify-content: center;
             gap: 15px;
+            flex-wrap: wrap; 
         }
         .social-links li a {
             color: #b0b0b0;
             font-size: 1.5rem;
             text-decoration: none;
+            margin: 5px; 
         }
         .social-links li a:hover {
             color: #fff;
@@ -81,7 +83,7 @@
         </div>
     </main>
     <footer class="bg-black text-center text-light py-3 mt-5">
-        <p>Last update: 16.12.2024</p>
+        <p>Last update: 17.12.2024</p>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="https://discord.gg/TEQmWd7" target="_blank" class="text-light">Discord</a></li>
             <li class="list-inline-item"><a href="https://github.com/timbelmon" target="_blank" class="text-light">GitHub</a></li>
