--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -152,7 +152,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Cyberdeck MK1</h5>
                             <p class="card-text">DIY Laptop based on Ryzen 7 5600G.</p>
-                            <!-- <a href="https://github.com/yourusername/project1" target="_blank" class="btn btn-primary">View on GitHub</a> -->
+                            <!-- <a href="https://github.com/timbelmon/project1" target="_blank" class="btn btn-primary">View on GitHub</a> -->
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Placeholder</h5>
                             <p class="card-text">This page is WIP what did you expect?</p>
-                            <!-- <a href="https://github.com/yourusername/project2" target="_blank" class="btn btn-primary">View on GitHub</a> -->
+                            <!-- <a href="https://github.com/timbelmon/project2" target="_blank" class="btn btn-primary">View on GitHub</a> -->
                         </div>
                     </div>
                 </div>
@@ -170,8 +170,12 @@
         </section>
     </main>
 
+    <section id="outro" class="text-center">
+        <a class="nav-link" href="projects.html">Want more? Click here to see all Projects.</a>
+    </section>
+
     <footer class="bg-black text-center text-light py-3 mt-5">
-        <p>Last update: 16.12.2024</p>
+        <p>Last update: 17.12.2024</p>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="https://discord.gg/TEQmWd7" target="_blank" class="text-light">Discord</a></li>
             <li class="list-inline-item"><a href="https://github.com/timbelmon" target="_blank" class="text-light">GitHub</a></li>
