--- a/project-pages/cybderdeck1.html
+++ b/project-pages/cybderdeck1.html
@@ -101,7 +101,7 @@
                 <li>Logitech Pebble Mouse and a slim generic Bluetooth keyboard.</li>
                 <li>PETG filament and neodymium magnets for enclosure design.</li>
             </ul>
-            <img src="C:\Users\Timo\Documents\GitHub\timbelmon.github.io\project-images\cyberdeck1\cyberdeck build process.jpg" class="img-fluid" alt="Responsive image">
+            <img src="/project-images/cyberdeck1/cyberdeck build process.jpg" class="img-fluid" alt="Responsive image">
 
             <h2>Enclosure Design</h2>
             <p>The enclosure is based on a Pelican-style waterproof box. Inside, a 3D-printed PETG structure houses the DeskMini motherboard and provides multifunctional storage for peripherals.</p>
