added festo project

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                 </div>
                 <div class="col">
                     <div class="card bg-dark text-light h-100">
-                        <img src="project-images\placeholder1.png" class="card-img-top" alt="Project 2 Screenshot">
+                        <a href="/project-pages/placeholder.html"><img src="project-images\festo_anlage_hochschule-emden-leer\festo_anlage.jpg" class="card-img-top" alt="Project 2 Screenshot"></a>
                         <div class="card-body">
-                            <h5 class="card-title">Placeholder</h5>
-                            <p class="card-text">This page is WIP what did you expect?</p>
-                            <!-- <a href="https://github.com/timbelmon/project2" target="_blank" class="btn btn-primary">View on GitHub</a> -->
+                            <h5 class="card-title">Industry 4.0 Management Server – University of Applied Sciences</h5>
+                            <p class="card-text">A Flask server for controlling a Festo production system using Modbus/TCP.</p>
+                            <a href="https://github.com/timbelmon/Industrie-4.0-Anlage-Hochschule-Emden" target="_blank" class="btn btn-primary">View on GitHub</a>
                         </div>
                     </div>
                 </div>
