--- a/projects.html
+++ b/projects.html
@@ -94,6 +94,11 @@
                     |
                     <a href="https://timbelmon.github.io/GcodeRepeater/GcodeRepeater.html">Open Tool</a>
                 </li>
+                <li class="project-item">
+                    <h3>Industry 4.0 Management Server – University of Applied Sciences</h3>
+                    <p>A Flask server for controlling a Festo production system using Modbus/TCP.</p>
+                    <a href="https://github.com/timbelmon/Industrie-4.0-Anlage-Hochschule-Emden">View GitHub</a>
+                </li>
                 <!-- Add more project items as needed -->
             </ul>
         </div>
