added screw tap project to projects

--- a/projects.html
+++ b/projects.html
@@ -99,6 +99,13 @@
                     <p>A Flask server for controlling a Festo production system using Modbus/TCP.</p>
                     <a href="https://github.com/timbelmon/Industrie-4.0-Anlage-Hochschule-Emden">View GitHub</a>
                 </li>
+                <li class="project-item">
+                    <h3>TrainAR Virtual Tapping Guide – University of Applied Sciences</h3>
+                    <p>AR-based interactive learning tool that teaches users the process tapping holes.</p>
+                    <a href="https://github.com/timbelmon/TrainAR-Deltaroboter-MQTT/tree/Gewindeschneiden">View GitHub</a>
+                    |
+                    <a href="https://www.youtube.com/watch?v=indUQ9hzCag">Demo Video</a>
+                </li>
                 <!-- Add more project items as needed -->
             </ul>
         </div>
