--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
+    <!-- 
+        If you looked into the code, I'm sure you have some questions. They are listed here:
+
+        Q: Is this all in HTML? Why no Framework?
+        A: Yes, I like having a flexible structure so I can design the project pages for each project individually. Sometimes, maintaining raw HTML is simpler than keeping up with evolving frameworks.
+    -->
     <style>
         body {
             background: #0a0a0a;
